--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
 <!-- Digitar aqui (index.html) -->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simplify - A porta do desenvolvimento web</title>
+
+    <!-- Ícone exibido na aba do navegador -->
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
+
+    <!-- Metadados para SEO -->
+    <meta name="description" content="Simplify - A porta do desenvolvimento web">
+    <meta name="keywords" content="front-end, html, css, js">
+
+    <!-- Link para CSS (estilos) -->
+     <!-- Global -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- Estilo da página (home) -->
+    <link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+    <!-- Header (menu de navegação) -->
+    <header>
+        <div class="limitador">
+            <!-- Logo -->
+            <h1><a href="index.html" title="Página inicial">Simplify</a></h1>
+
+            <!-- Navegação -->
+            <nav>
+                <ul class="menu">
+                    <li><a href="index.html" title="Página inicial">Home</a></li>
+                    <li><a href="produtos.html" title="Página de produtos">Produtos</a></li>
+                    <li><a href="servicos.html" title="Página de serviços">Serviços</a></li>
+                    <li><a href="contato.html" title="Página de contato">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Main -->
+    <main>
+        <!-- Seção de destaque -->
+        <section class="destaque">
+            <div>
+                <h2>HTML5 e CSS3</h2>
+                <p>A porta de entrada para o desenvolvimento web</p>
+            </div>
+        </section>
+
+        <!-- Seção sobre frontend -->
+        <section class="limitador front-end">
+            <h2>Desenvolvedor Front-End</h2>
+            <p>O desenvoldedor Front-End cuida do código interpretado <i>browser</i>.</p>
+            <p>No desenvolvimento por camadas, 
+                <abbr title="Hypertext Markup Language">HTML</abbr> é responsável por estruturar o conteúdo,
+                <abbr title="Cascading Style Sheets">CSS</abbr> ucida dos estilos visuais e o JS da interatividade.
+            </p>
+
+            <!-- Imagem ilustrativa -->
+            <figure>
+                <img src="imagens/linguagens.png" alt="HTML, CSS e JS">
+            </figure>
+        </section>
+
+        <!-- Seção com o vídeo do youtube -->
+        <section class="historia">
+            <h2>História da internet</h2>
+            <iframe height="350" src="https://www.youtube.com/embed/jlkvzcG1UMk" frameborder="0" allow="accelerometer; autoplay" allowfullscreen></iframe>
+        </section>
+
+        <!-- Mapa -->
+        <section class="localizacao">
+            <h2>Localização</h2>
+            <p>
+                Av Santos Dumont, 300 <br>
+                Ipiranguinha <br>
+                Santo André/SP
+            </p>
+            <p>Telefone: (11) 3322-0050 - E-mail: santoandre@sp.senai.br</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.268117966629!2d-46.52076328440502!3d-23.66636787136494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce69d619d62a27%3A0x41f94d2be4af4536!2sEscola%20SENAI%20%22A.%20Jacob%20Lafer%22!5e0!3m2!1spt-BR!2sbr!4v1669677629758!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+    </main>
+
+    <!-- Rodapé -->
+     <footer>
+        <p>Simplify é um site fictício desenvolvido no Senai/Sesi © - Alguns Direitos Reservados - 2025</p>
+     </footer>
+</body>
+</html>
